@@ -1,0 +1,1 @@
+BEGIN { $i++ = 3 ; print i }
