@@ -1,3 +1,8 @@
+2013-10-09         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (badassign1): New test.
+	* badassign1.awk, badassign1.ok: New files.
+
 2013-09-13         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am: Fix quoting for generation of Maketests file so
