@@ -1,3 +1,8 @@
+2013-10-09         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y (mk_assignment): Rework switch to handle Op_assign,
+	and to provide a better error message upon unknown opcode.
+
 2013-09-28         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c: Sync with GNU grep.
